--- a/server/docker-compose/cloudflare-ddns/docker-compose.yml
+++ b/server/docker-compose/cloudflare-ddns/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     read_only: true
     cap_drop: [all]
     security_opt: [no-new-privileges:true]
+    environment:
+      - IP6_PROVIDER=none
     env_file:
       - ./cloudflare-ddns.env
     restart: unless-stopped
