--- a/server/docker-compose/wirehole/docker-compose.yml
+++ b/server/docker-compose/wirehole/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - DNS_SERVER_ENABLE_BLOCKING=true
       - DNS_SERVER_BLOCK_LIST_URLS= https://big.oisd.nl/
     env_file:
-      - ./technitium.env
+      - /srv/envs/technitium.env
 
     volumes:
       - /srv/wirehole/technitium:/etc/dns
@@ -58,7 +58,7 @@ services:
       WG_DEFAULT_ADDRESS: 10.69.69.x
       WG_DEFAULT_DNS: 10.40.0.2
     env_file:
-      - ./wg-easy.env
+      - /srv/envs/wg-easy.env
     deploy:
       resources:
         limits:
